# milvus_checkout

./: .gitignore  bethany_meyer_essay.txt  build_pkg.py  create_user_collection.py  docker-compose.yml  hello_milvus.py  make_venv.py  setup.cfg  setup.py  test_rbac.py  uts.py
demo_client/: __init__.py  base_rbac_rag_client.py  demo_client.py  get_query_engine.py  llamaidx_rbac_rag_client.py  milvus_rag_client.py  rbac_rag_client.py  streamlit_app.py  style.css  utils.py
local_server/: milvus.yaml  restart.sh
milvus_client/: demo_client.py
repo_tools/: paths.py  venv.py
uts/: Milvus  test_add_docs.py  test_demo_client.py  test_llamaidx_rbac_rag_client.py  test_rbac.py  test_rbac_rag_client.py
