[metadata]
name = milvus_client
description = A simplified client for the Milvus vector database.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/highvelcty/milvus_checkout
project_urls =
    Bug Tracker = https://hpe-aiatscale.atlassian.net/jira/software/projects/SCALE/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.8
include_package_data = True
install_requires =
    pymilvus

[options.extras_require]
BUILD =
    setuptools
    wheel

[options.packages.find]
where = .

exclude =
    uts*
